@@ -23,10 +23,14 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.concurrent.Callable;
+import java.util.concurrent.Executors;
+import java.util.concurrent.ScheduledExecutorService;
+import java.util.concurrent.TimeUnit;
 
 import ch.qos.logback.classic.Level;
 import io.javelit.core.Server;
 import jakarta.annotation.Nonnull;
+import org.jetbrains.annotations.ApiStatus;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import picocli.CommandLine;
@@ -34,56 +38,54 @@ import picocli.CommandLine.Command;
 import picocli.CommandLine.Option;
 import picocli.CommandLine.Parameters;
 
+import static com.google.common.base.Preconditions.checkArgument;
 import static io.javelit.core.utils.LangUtils.optional;
 
 
-@Command(name = "javelit", mixinStandardHelpOptions = true,
+@Command(name = "javelit",
+        mixinStandardHelpOptions = true,
         versionProvider = Cli.JavelitVersionProvider.class,
         description = "Javelit, a Streamlit-like framework for Java")
 public class Cli implements Callable<Integer> {
 
-    private static final Logger logger = LoggerFactory.getLogger(Cli.class);
+    private static final Logger LOG = LoggerFactory.getLogger(Cli.class);
 
     @Command(name = "run", description = "Run a Javelit application")
     static class RunCommand implements Callable<Integer> {
 
-        @SuppressWarnings("unused")
-        @Parameters(index = "0", description = "The Javelit app Java file to run")
-        private String appPath;
+        @SuppressWarnings("unused") @Parameters(index = "0", description = """
+                The Javelit app Java file to run. Supported:
+                (0) A local file path
+                (1) A direct link to a text/plain .java file
+                  e.g. https://raw.githubusercontent.com/user/repo/branch/file.java
+                (2) A GitHub repository URL
+                  e.g. https://github.com/user/repo
+                (3) A GitHub folder tree URL
+                  e.g. github.com/user/repo/tree/branch/path/to/folder
+                (4) A GitHub file blob URL 
+                  e.g. github.com/javelit/javelit/blob/main/examples/Callbacks.java
+                """) private String appPath;
 
-        @SuppressWarnings("unused")
-        @Option(names = {"-p", "--port"}, description = "Port to run server on", defaultValue = "8080")
-        private int port;
+        @SuppressWarnings("unused") @Option(names = {"-p", "--port"},
+                description = "Port to run server on",
+                defaultValue = "8080") private int port;
 
-        @SuppressWarnings("unused")
-        @Option(names = {"--no-browser"}, description = "Don't open browser automatically")
-        private boolean noBrowser;
+        @SuppressWarnings("unused") @Option(names = {"--no-browser"},
+                description = "Don't open browser automatically") private boolean noBrowser;
 
-        @SuppressWarnings("unused")
-        @Option(names = {"--classpath", "-cp"}, description = "Additional classpath entries")
-        private String classpath;
+        @SuppressWarnings("unused") @Option(names = {"--watch-remote"},
+                description = "Applies when running a remote file/folder. The remote file/folder is refreshed every N seconds. Default is -1 (no refresh). The minimum positive value is 60 seconds to prevent overloading webservers.",
+                defaultValue = "-1") @ApiStatus.Experimental private int watchRemoteSeconds;
 
-        @SuppressWarnings("unused")
-        @Option(names = {"--headers-file"}, description = "File containing additional HTML headers")
-        private String headersFile;
+        @SuppressWarnings("unused") @Option(names = {"--classpath", "-cp"},
+                description = "Additional classpath entries") private String classpath;
 
-        @SuppressWarnings("unused")
-        @Option(names = {"-cca", "--custom-compile-args"},
-                description = "Custom arguments for compile command. To avoid breaking spaces, separated by :: (e.g., clean::compile::-DargLine=\"-Xmx1024m -XX:MaxPermSize=256m\"). Alternatively, specify multiple times (e.g., -cca clean -cca compile -cca \"-DargLine=-Xmx1024m -XX:MaxPermSize=256m\"). Overrides default Maven/Gradle compile arguments.",
-                split = "::")
-        private String[] customCompileCmdArgs;
+        @SuppressWarnings("unused") @Option(names = {"--headers-file"},
+                description = "File containing additional HTML headers") private String headersFile;
 
-        @SuppressWarnings("unused")
-        @Option(names = {"-ccpa", "--custom-classpath-args"},
-                description = "Custom arguments for classpath command, separated by :: (e.g., dependency:build-classpath::-DincludeScope=test). Alternatively, specify multiple times (e.g., -ccpa dependency:build-classpath -ccpa -DincludeScope=test). Overrides default Maven/Gradle classpath arguments.",
-                split = "::")
-        private String[] customClasspathCmdArgs;
-
-        @SuppressWarnings("unused")
-        @Option(names = {"--log-level"},
+        @SuppressWarnings("unused") @Option(names = {"--log-level"},
                 description = "Set log level (TRACE, DEBUG, INFO, WARN, ERROR). Default: INFO. If the value is not recognized, fallbacks to DEBUG.",
-                defaultValue = "INFO")
-        private String logLevel;
+                defaultValue = "INFO") private String logLevel;
 
         @Override
         public Integer call() throws Exception {
@@ -99,27 +101,29 @@ public class Cli implements Callable<Integer> {
             try {
                 javaFilePath = resolveAppPath(appPath);
             } catch (IOException e) {
-                logger.error("Failed to resolve app path: {}", appPath, e);
+                LOG.error("Failed to resolve app path: {}", appPath, e);
                 return 1;
             }
 
-            logger.info("Starting Javelit on file {}", javaFilePath.toAbsolutePath());
+            LOG.info("Starting Javelit on file {}", javaFilePath.toAbsolutePath());
             if (!Files.exists(javaFilePath)) {
-                logger.error("File not found: {}", javaFilePath.toAbsolutePath());
+                LOG.error("File not found: {}", javaFilePath.toAbsolutePath());
                 return 1;
             }
             // Create server
-            final Server server = Server.builder(javaFilePath, port).additionalClasspath(classpath)
-                                        .headersFile(headersFile)
-                                        .build();
+            final Server server = Server
+                    .builder(javaFilePath, port)
+                    .additionalClasspath(classpath)
+                    .headersFile(headersFile)
+                    .build();
 
             // Start everything
             final String url = "http://localhost:" + port;
             try {
                 server.start();
-                logger.info("Press Ctrl+C to stop");
+                LOG.info("Press Ctrl+C to stop");
             } catch (Exception e) {
-                logger.error("Error starting server", e);
+                LOG.error("Error starting server", e);
                 return 1;
             }
             if (!noBrowser) {
@@ -128,7 +132,7 @@ public class Cli implements Callable<Integer> {
 
             // wait for interruption
             Runtime.getRuntime().addShutdownHook(new Thread(() -> {
-                logger.info("Shutting down...");
+                LOG.info("Shutting down...");
                 server.stop();
             }));
             Thread.currentThread().join();
@@ -143,8 +147,7 @@ public class Cli implements Callable<Integer> {
             final boolean isUrl = appPath.startsWith("http://") || appPath.startsWith("https://");
             if (!isUrl && !appPath.endsWith(".java")) {
                 // note: I know a Java file could in theory not end with .java but I want to reduce other issues downstream
-                logger.error("File {} does not look like a java file. File should end with .java",
-                             appPath);
+                LOG.error("File {} does not look like a java file. File should end with .java", appPath);
                 parametersAreValid = false;
             }
             // perform other parameter checks here
@@ -156,8 +159,29 @@ public class Cli implements Callable<Integer> {
         private Path resolveAppPath(final @Nonnull String pathOrUrl) throws IOException {
             boolean isUrl = pathOrUrl.startsWith("http://") || pathOrUrl.startsWith("https://");
             if (isUrl) {
-                logger.info("Detected remote file URL: {}", pathOrUrl);
-                return RemoteFileUtils.downloadRemoteFile(pathOrUrl);
+                LOG.info("Detected remote file URL: {}", pathOrUrl);
+                final Path tempDir = Files.createTempDirectory("javelit-remote-");
+                final Path path = RemoteFileUtils.downloadRemoteFile(pathOrUrl, tempDir);
+                if (watchRemoteSeconds > 0) {
+                    checkArgument(watchRemoteSeconds >= 60,
+                                  "Invalid watch remote interval of %s seconds. Interval should be at least 60 seconds.".formatted(
+                                          watchRemoteSeconds));
+                    // Schedule periodic refresh of remote file
+                    final ScheduledExecutorService scheduler = Executors.newScheduledThreadPool(1);
+                    scheduler.scheduleAtFixedRate(() -> {
+                        try {
+                            LOG.info("Refreshing remote file from {}", pathOrUrl);
+                            RemoteFileUtils.downloadRemoteFile(pathOrUrl, tempDir);
+                            LOG.info("Successfully refreshed remote file");
+                        } catch (Exception e) {
+                            LOG.error("Failed to refresh remote file", e);
+                        }
+                    }, watchRemoteSeconds, watchRemoteSeconds, TimeUnit.SECONDS);
+                    Runtime.getRuntime().addShutdownHook(new Thread(scheduler::shutdownNow));
+                    LOG.info("Successfully scheduled remote file/folder refresh every {} seconds.", watchRemoteSeconds);
+                }
+
+                return path;
             }
             return Paths.get(pathOrUrl);
         }
@@ -165,9 +189,9 @@ public class Cli implements Callable<Integer> {
 
     @Command(name = "hello", description = "Create and run a Hello World app.")
     static class HelloWorldCommand implements Callable<Integer> {
-        @SuppressWarnings("unused")
-        @Option(names = {"-p", "--port"}, description = "Port to run server on", defaultValue = "8080")
-        private int port;
+        @SuppressWarnings("unused") @Option(names = {"-p", "--port"},
+                description = "Port to run server on",
+                defaultValue = "8080") private int port;
 
         @Override
         public Integer call() throws Exception {
@@ -176,19 +200,19 @@ public class Cli implements Callable<Integer> {
 
             final Path helloWorldFile = Paths.get("HelloWorld.java");
             if (Files.exists(helloWorldFile)) {
-                logger.info("HelloWorld.java already exists in the current directory");
-                logger.info("You can run it with: javelit run --port {} HelloWorld.java", port);
+                LOG.info("HelloWorld.java already exists in the current directory");
+                LOG.info("You can run it with: javelit run --port {} HelloWorld.java", port);
                 return 1;
             }
             try (InputStream resourceStream = getClass().getResourceAsStream("/cli/HelloWorld.java")) {
                 if (resourceStream == null) {
-                    logger.error("Could not find HelloWorld.java template in resources");
+                    LOG.error("Could not find HelloWorld.java template in resources");
                     return 1;
                 }
                 Files.copy(resourceStream, helloWorldFile);
-                logger.info("Created {} in the current directory", helloWorldFile.getFileName().toString());
+                LOG.info("Created {} in the current directory", helloWorldFile.getFileName().toString());
             } catch (IOException e) {
-                logger.error("Failed to create HelloWorld.java", e);
+                LOG.error("Failed to create HelloWorld.java", e);
                 return 1;
             }
 
@@ -212,6 +236,7 @@ public class Cli implements Callable<Integer> {
         final int exitCode = new CommandLine(new Cli())
                 .addSubcommand("run", new RunCommand())
                 .addSubcommand("hello", new HelloWorldCommand())
+                .setUsageHelpWidth(90)
                 .execute(args);
         System.exit(exitCode);
     }
@@ -224,13 +249,11 @@ public class Cli implements Callable<Integer> {
     public static class JavelitVersionProvider implements CommandLine.IVersionProvider {
         @Override
         public String[] getVersion() {
-            return new String[]{
-                    optional(Cli.class.getPackage())
-                            .map(Package::getImplementationTitle)
-                            .orElse("unknown project name") + " "
-                    + optional(Cli.class.getPackage())
-                            .map(Package::getImplementationVersion)
-                            .orElse("unknown version"),};
+            return new String[]{optional(Cli.class.getPackage())
+                                        .map(Package::getImplementationTitle)
+                                        .orElse("unknown project name") + " " + optional(Cli.class.getPackage())
+                                        .map(Package::getImplementationVersion)
+                                        .orElse("unknown version"),};
         }
     }
 
@@ -239,10 +262,10 @@ public class Cli implements Callable<Integer> {
             if (Desktop.isDesktopSupported()) {
                 Desktop.getDesktop().browse(new URI(url));
             } else {
-                logger.warn("Desktop not supported, cannot open browser automatically");
+                LOG.warn("Desktop not supported, cannot open browser automatically");
             }
         } catch (Exception e) {
-            logger.error("Could not open browser. Please open browser manually. ", e);
+            LOG.error("Could not open browser. Please open browser manually. ", e);
         }
     }
 }
